@@ -2,11 +2,12 @@
 hoygan = 1
 spam = 1
 awaystr = autoaway
+media = 1
 canales = #ubuntu,#gatoscript,
-colores = 1
-mayusculas = 1
 ctcps = 1
-chanspam = www.geocities.com/octubre122005,www.dominiosteca.biz,es-facil.com/ganar,WWW.ELECTRIKSOUND.COM,www.fororelax.net,www.shateros.com,www.chaterosforever.com,neverendingnovel.wordpress.com,criticonomicon.wordpress.com,crazyvideos.zapto.org,youtube.com/mryorx,myminicity.es,nokia n73,lasegundapuerta.com,www.myspace.com/joaquinbello,www.ircap.es,@hotmail.com,www.proteinasyfitness.com,WWW.SERIALCRACK.ES,suellencastillo,UnVoto.asp,mileurazos.es.tl,web/mviiiax,anhely_cielo,yorxpatri,www.antitaurino.org,midmind,usadastangas,carolina-cerezuela,lordserer,WWW.CHEO.HAZBLOG.COM,moccia,jordiponsi,tuatubolayyoalamia.blogspot.com,AGREGAME AMI KORREO,calientita_sexyxcam,http://quelocochat.com/
+mayusculas = 1
+colores = 1
+chanspam = www.geocities.com/octubre122005,www.dominiosteca.biz,es-facil.com/ganar,WWW.ELECTRIKSOUND.COM,www.fororelax.net,www.shateros.com,www.chaterosforever.com,neverendingnovel.wordpress.com,criticonomicon.wordpress.com,crazyvideos.zapto.org,youtube.com/mryorx,myminicity.es,nokia n73,lasegundapuerta.com,www.myspace.com/joaquinbello,www.ircap.es,@hotmail.com,www.proteinasyfitness.com,WWW.SERIALCRACK.ES,suellencastillo,UnVoto.asp,mileurazos.es.tl,web/mviiiax,anhely_cielo,yorxpatri,www.antitaurino.org,midmind,usadastangas,carolina-cerezuela,lordserer,WWW.CHEO.HAZBLOG.COM,moccia,jordiponsi,tuatubolayyoalamia.blogspot.com,AGREGAME AMI KORREO,calientita_sexyxcam,quelocochat.com,morenita_cam_luciax,#m7x0,www.13mensistas.com
 ban = 1
 away = 0
 
