@@ -46,6 +46,15 @@ menu ADD "GatoScript/RSS/Eliminar feed" "getstr # "rssdel" "Feed:""
 menu ADD "GatoScript/-"
 
 menu ADD "GatoScript/Opciones"
+menu ADD "GatoScript/Opciones/Protecciones"
+menu -t0 ADD "GatoScript/Opciones/Protecciones/Away" "opciones protecciones away 1" "opciones protecciones media 0"
+menu -t1 ADD "GatoScript/Opciones/Protecciones/Ban" "opciones protecciones ban 1" "opciones protecciones ban 0"
+menu -t1 ADD "GatoScript/Opciones/Protecciones/Colores" "opciones protecciones colores 1" "opciones protecciones colores 0"
+menu -t1 ADD "GatoScript/Opciones/Protecciones/CTCPs" "opciones protecciones ctcps 1" "opciones protecciones ctcps 0"
+menu -t1 ADD "GatoScript/Opciones/Protecciones/Mayusculas" "opciones protecciones mayusculas 1" "opciones protecciones mayusculas 0"
+menu -t1 ADD "GatoScript/Opciones/Protecciones/HOYGAN" "opciones protecciones hoygan 1" "opciones protecciones hoygan 0"
+menu -t1 ADD "GatoScript/Opciones/Protecciones/Spam" "opciones protecciones spam 1" "opciones protecciones spam 0"
+menu ADD "GatoScript/Opciones/-"
 menu ADD "GatoScript/Opciones/Reproductor"
 menu ADD "GatoScript/Opciones/Reproductor/XMMS" "opciones media reproductor xmms"
 menu ADD "GatoScript/Opciones/Reproductor/Rhythmbox" "opciones media reproductor rhythmbox"
